# Keras-to-Realtime-Audio

./: README.md  kerasifyDNN1.py
SuperCollider UGen/: PV_Kerasify.sc  PV_Kerasify.scx  PV_Kerasifyclienttests.scd
SuperCollider UGen/HelpSource/Classes/: PV_DNNMorph.schelp  PV_Kerasify.schelp  PV_KerasifyActivationFromBuffer.schelp
SuperCollider UGen/source/: CMakeLists.txt  PV_Kerasify.cpp  keras_model.h
Web Audio API example/: onnx.min.js  playbackDNN.html
